# pfica-stats

./: .env  Cargo.toml  dev.docker-compose.yml  flake.nix
nix/: package.nix
src/: database.rs  main.rs
src/routes/: push.rs
